# LAFigureSpecs

./: .gitignore  AGENTS.md  LAFigureSpecs_demo.ipynb  README.md  la_figures_demo.ipynb  mkdocs.yml  pyproject.toml  render_smoke.py
.github/workflows/: ci.yml  docs.yml
LAFigureSpecs/: __about__.py  __init__.py  _ge_legacy_compat.py  _sympy_utils.py  backsub.py  convenience.py  convenience_ge.py  convenience_qr.py  convenience_utils.py  eig.py  formatting.py  ge.py  ge_convenience.py  ge_paths.py  ge_stack_helpers.py  qr.py  rendering.py  show_ge.py  svd.py
binder/: postBuild  requirements.txt
docs/: api.md  getting-started.md  index.md  interop.md  overview.md  recipes.md  specs.md
docs/notebooks/: 02_gaussian_elimination.ipynb  03_qr.ipynb  04_eigenproblems.ipynb  05_algorithms_overview.ipynb  06_julia_interop.ipynb  07_ge_top_level_functions.ipynb  08_qr_top_level_functions.ipynb  09_eig_svd_top_level_functions.ipynb  10_backsubstitution_top_level_functions.ipynb  11_formatting_and_renderers.ipynb  12_show_ge_class.ipynb  13_latex_fragment_rendering.ipynb  README.md
la_figures/: __init__.py  _ge_legacy_compat.py  _sympy_utils.py  backsub.py  convenience.py  convenience_qr.py  convenience_utils.py  eig.py  formatting.py  ge.py  ge_convenience.py  qr.py  rendering.py  show_ge.py  svd.py
tests/: conftest.py  test_api_surface.py  test_backsub_trace.py  test_bundle_error_handling.py  test_bundle_spec_reuse.py  test_characterization_eig_svd_tex.py  test_characterization_eigproblem_tex.py  test_characterization_qr_tex.py  test_convenience_helpers.py  test_convenience_qr_args.py  test_convenience_utils.py  test_eig_decorators.py  test_eig_spec.py  test_eig_svd_spec.py  test_formatting.py  test_ge.py  test_ge_bundle_fallback.py  test_ge_bundle_submatrix_spans.py  test_ge_compat_wrapper.py  test_ge_decorate.py  test_ge_legacy_alignment.py  test_ge_legacy_wrapper.py  test_ge_parity.py  test_ge_parity_legacy.py  test_ge_ref_paths.py  test_ge_rowechelon_paths.py  test_ge_spec_smoke.py  test_ge_submatrix_spans.py  test_ge_svg_wrapper.py  test_ge_tbl_bundle_submatrix_spans.py  test_ge_tbl_parity.py  test_ge_tbl_parity_legacy.py  test_ge_tbl_spec_smoke.py  test_ge_tbl_svg_render.py  test_ge_tbl_tex_smoke.py  test_ge_trace.py  test_julia_bridge_inputs.py  test_latex_svg_render.py  test_output_dir_aliases.py  test_qr_rank_deficient.py  (+8 more)
