[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LAFigureSpecs"
version = "0.0.1"
description = "Linear algebra algorithms and description objects for matrixlayout figures"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "sympy>=1.12",
  "numpy>=2,<3",
]

[project.optional-dependencies]
render = [
  "matrixlayout[render]>=0.0.1",
]

dev = [
  "build>=1.2",
  "mypy>=1.15",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9.10",
  "twine>=5.1",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "test*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "render: tests that require external rendering toolchains (LaTeX + SVG converter)",
]

[tool.coverage.run]
source = ["LAFigureSpecs"]
branch = true

[tool.coverage.report]
fail_under = 79
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "site",
  "tmp",
]

[tool.ruff.lint]
select = ["E", "F", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
warn_unused_ignores = true
